--- a/package.json
+++ b/package.json
@@ -18,17 +18,17 @@
     "framer-motion": "^12.23.25",
     "lucide-react": "^0.555.0",
     "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-chartjs-2": "^5.3.1",
-    "react-chessboard": "^5.8.6",
-    "react-dom": "^19.2.0",
+    "react-chessboard": "4.3.4",
     "react-router-dom": "^7.10.1",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@tailwindcss/postcss": "^4.1.17",
-    "@types/react": "^19.2.5",
-    "@types/react-dom": "^19.2.3",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.3",
     "@vitejs/plugin-react": "^5.1.1",
     "autoprefixer": "^10.4.22",
     "eslint": "^9.39.1",
